# zk0

./: .coveragerc  .env.example  .gitignore  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.zk0  Gemfile  README.md  _config.yml  build-site.sh  converging_server.py  converging_task.py  datasets.yaml  docker-compose.client.yml  docker-compose.server.yml  get-zk0bot.sh  index.md  push_to_hf.py  pyproject.toml  requirements.txt  sitemap.xml  superexec.Dockerfile  sys_monitor_logs.sh  test_integration.py  train-fl-simulation.sh  train-lerobot-standalone.sh  train.sh  zk0bot.sh
.bundle/: config
.github/ISSUE_TEMPLATE/: node-operator-application.md
.github/workflows/: ci.yml  docker-publish.yml  jekyll-build.yml
.kilocode/: mcp.json
.kilocode/memory-bank/: README.md
.kilocode/memory-bank/contexts/: context-inheritance.md  context-passing.md  task-context-template.md
.kilocode/memory-bank/modes/: architect-mode.md  code-mode.md
.kilocode/memory-bank/quality/: implementation-checklist.md  post-implementation-checklist.md  pre-implementation-checklist.md
.kilocode/memory-bank/rules/: project-constraints.md  technical-specifications.md
.kilocode/rules/: memory-bank-instructions.md  testing-standards.md
.kilocode/rules-architect/: architect-mode.md
.kilocode/rules-code/: code-mode.md  rules.md
.kilocode/rules-code-reviewer/: rules.md
.kilocode/rules-code-simplifier/: rules.md
.kilocode/rules-test-engineer/: rules.md
.kilocode/rules/memory-bank/: architecture.md  brief.md  compliance-requirements.md  comprehensive-checklist.md  context-capture.md  context-inheritance.md  context-management.md  context-packaging.md  context-passing.md  context-recovery.md  context-transfer.md  context-validation.md  context.md  flower-specifications.md  implementation-checklist.md  integration-requirements.md  memory-bank-readme.md  performance-benchmarks.md  post-implementation-checklist.md  pre-implementation-checklist.md  product.md  project-constraints.md  smolvla-specifications.md  task-context-template.md  tasks.md  tech.md  technical-specifications.md  testing-standards.md
.kilocode/rules/memory-bank copy/: architecture.md  comprehensive-checklist.md  context.md  product.md  project-constraints.md  tasks.md  tech.md
.kilocode/workflows/: client-setup-workflow.md  deployment-workflow.md  federated-learning-workflow.md  model-training-workflow.md
_includes/: head.html
_site/: CONTRIBUTING.md  README.html  feed.xml  index.html  robots.txt  sitemap.xml
_site/assets/: main.css.map
_site/docs/: ARCHITECTURE.html  INSTALLATION.html  NODE-OPERATORS.html  RUNNING.html
docker/: Dockerfile.zk0  docker-compose.client.yml  docker-compose.server.yml  superexec.Dockerfile
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HYPERPARAMETER_ANALYSIS.md  INSTALLATION.md  NODE-OPERATORS.md  ROADMAP.md  RUNNING.md  SPRINT-PLAN.md  TECHNICAL-OVERVIEW.md  blog-update-smolvla-fl-progress.md  sprint-plan.md  substack-zk0-post.md
federate/: README.md  pyproject.toml
federate/lerobot_example/: client_app.py  lerobot_dataset_partitioner.py  pusht_partitioner.py  server_app.py  task.py
quickstart-smolvla/: .gitignore  README.md  pyproject.toml  requirements.txt
quickstart-smolvla/smolvla_example/: __init__.py  client_app.py  server_app.py
quickstart-smolvla/tests/: conftest.py
quickstart-smolvla/tests/integration/: test_integration.py
quickstart-smolvla/tests/unit/: test_basic_functionality.py  test_error_handling.py  test_smolvla_client.py
src/: __init__.py  client_app.py  client_core.py  logger.py  push_to_hf.py  server_app.py  task.py  utils.py  visualization.py  wandb_utils.py
src/client/: client_core.py
src/common/: __init__.py  parameter_utils.py  utils.py
src/configs/: __init__.py  datasets.py  default.yaml
src/configs/policy/: vla.yaml
src/core/: __init__.py  utils.py
src/server/: aggregation.py  evaluation.py  fit_configuration.py  metrics_utils.py  model_checkpointing.py  model_utils.py  parameter_validation.py  server_utils.py  strategy.py  strategy_core.py  visualization.py  wandb_utils.py
src/training/: evaluation.py  fedprox_utils.py  model_utils.py  scheduler_utils.py  train.py  training_loop.py  training_setup.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_basic_functionality.py  test_checkpoint_saving.py  test_client_app.py  test_configs.py  test_data_extraction.py  test_dataset_loading.py  test_dataset_splitting.py  test_dataset_validation.py  test_dependency_verification.py  test_error_handling.py  test_evaluation.py  test_fedprox_parameters.py  test_file_extraction.py  test_git_operations.py  test_logger.py  test_metrics_aggregation.py  test_metrics_preparation.py  test_model_card.py  test_model_loading.py  test_model_saving.py  test_parameter_aggregation.py  test_prepare_server_eval_metrics.py  test_server_app.py  test_smolvla_client.py  test_task.py  test_utils.py  test_wandb_utils.py
wandb/: latest-run
wandb/run-20251004_191526-qzd5ihtj/files/: config.yaml  diff_5d9533dd78cf6dfdad36e5a8b4e1f6db13baf37c.patch  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251004_200641-vjco2y4q/files/: diff.patch  wandb-metadata.json
wandb/run-20251004_211500-260i4ubo/files/: config.yaml  diff.patch  wandb-metadata.json  wandb-summary.json
website/: CONTRIBUTING.md  README.md  _config.yml  index.md
website/_includes/: footer.html  head.html
website/_layouts/: custom.html
website/assets/css/: custom.css
website/docs/: FAQ.md  INSTALLATION.md  NODE-OPERATORS.md  RUNNING.md
