[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot_example"
version = "1.0.0"
description = "Federated Learning with Hugginface LeRobot transformers and Flower (Quickstart Example)"
license = "Apache-2.0"
authors = [
    { name = "The Flower Authors", email = "hello@flower.ai" },
    { name = "Kaushik Amar Das", email = "kaushik.das@iiitg.ac.in" },
    { name = "Ivelin Ivanov", email = "ivelin117@gmail.com" },
]
dependencies = [
    "flwr[simulation]==1.12.0",
    "flwr-datasets>=0.3.0",
    "torch>=2.5.0",
#    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.3.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "lerobot_example.server_app:app"
clientapp = "lerobot_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
model-name = "lerobot/pusht"
fraction-fit = 0.33
fraction-evaluate = 0.05

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 4 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 4 ClientApp will run in a given GPU (lower it to increase parallelism)
